--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
           <li><a href="#">Product detail</a></li>
           <li><a href="#">About us</a></li>
           <li><a href="https://www.instagram.com/">Follow us <img class="icon" src="./resources/images/instagram.png"></a></li>
-          <li><a href="#" class="button">Join us</a></li>
         </ul>
       </nav>
       <nav class="mobile">
@@ -58,18 +57,18 @@
       <div class="feature">
         <div class="center">
           <div class="image-container">
-            <img src="resources/images/feature-1.png" width="100%"/>
+            <img src="resources/images/feature-1.png" />
           </div>
           <div class="content">
             <h2>Advanced, automatic, instant</h2>
-            <h3>Shutter speed, aperture and flash output adjust automatically</h3>
+            <h3>Shutter speed, apperture and flash output adjust automatically</h3>
           </div>
         </div>
       </div>
       <div class="feature">
         <div class="center">
           <div class="image-container">
-            <img src="resources/images/feature-2.png" width="100%"/>
+            <img src="resources/images/feature-2.png" />
           </div>
           <div class="content">
             <h2>Beautifully crafted inside-out</h2>
@@ -101,8 +100,8 @@
       </div>
     </div>
 
-    <!-- Quotes Section -->
-     <div id="quotes-section">
+    <!-- Quotes Section
+    <div id="quotes-section">
       <div class="content center">
         <span class="quote">“It’s truly something that could create a brand new photography Renaissance”</span>
         <img class="quote-citation" src="./resources/images/photography-logo.png" />
